GIT cleaned up